--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Orbitron:wght@400;600&display=swap');
 
 @font-face {
     font-family: 'San Francisco' ;
@@ -18,6 +18,10 @@ body {
 
 .font-dancing {
     font-family: 'Dancing Script', cursive;
+}
+
+.font-orbitron {
+  font-family: 'Orbitron', sans-serif;
 }
 
 .sd-secondary{
@@ -266,3 +270,5 @@ body {
       opacity: 1;
     }
   }
+
+  
